[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = "0.6.5"
dotenv = "0.15.0"
log = "0.4.26"
pretty_env_logger = "0.5.0"
quinn = "0.11.6"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
proto.workspace = true
tokio-rustls = { version = "0.26.2", features = ["ring"] }

[build-dependencies]
rcgen = "0.13.2"
